--- a/index.html
+++ b/index.html
@@ -200,34 +200,37 @@
 
     <main id="top" class="hero">
       <div class="panel">
-        <div class="kicker"><span class="dot"></span> A reading app + marketplace for Black indie authors</div>
-        <h1>Black stories. Every genre. A reading home that feels like velvet. 💜📚</h1>
-        <p class="sub">A premium reading platform built exclusively for Black indie authors — romance, sci‑fi, fantasy, thrillers, poetry, dark romance, and everything in between. Read freely. Earn fairly. Build community.</p>
+        <div class="kicker"><span class="dot"></span> Launching Soon</div>
+        <h1>Black Velvet Stories 💜📚</h1>
+        <p class="sub">A premium reading home built to amplify Black indie authors across every genre. Romance. Fantasy. Paranormal. Sci‑Fi. Dark stories. Soft stories. Real stories.</p>
+
+        <p class="sub"><strong>Readers:</strong> Discover new voices, follow your favorite authors, build your library.<br>
+        <strong>Authors:</strong> A beautiful platform designed for visibility, fair pay, and community.</p>
 
         <div class="ctaRow">
-          <a class="btn btnPrimary" href="#pricing">Start reading →</a>
-          <a class="btn btnGhost" href="#authors">Want to publish here?</a>
+          <a class="btn btnPrimary" href="#authors">Join Early Access →</a>
+          <a class="btn btnGhost" href="mailto:support@blackvelvetstories.com">Contact Us</a>
         </div>
 
-        <div class="statGrid" aria-label="quick stats">
-          <div class="stat"><b>Fair Pay</b><span>Transparent creator earnings</span></div>
-          <div class="stat"><b>2 Tiers</b><span>Standard + Spicy Vault 😈</span></div>
-          <div class="stat"><b>Hybrid</b><span>Subscriptions + Coins</span></div>
+        <div class="statGrid" aria-label="launch highlights">
+          <div class="stat"><b>Black Indie Focus</b><span>All genres welcome</span></div>
+          <div class="stat"><b>Community Driven</b><span>Readers + writers together</span></div>
+          <div class="stat"><b>Coming Soon</b><span>Web + mobile reading</span></div>
         </div>
       </div>
 
       <div class="panel mini">
         <div class="tag"><div>
-          <b>Genres supported</b><br><span style="color:var(--muted); font-size:13px">Romance • Dark Romance • Paranormal • Sci‑Fi • Fantasy • Thriller</span>
-        </div><span class="pill">Flexible</span></div>
+          <b>Early reader perks</b><br><span style="color:var(--muted); font-size:13px">Bonus coins, early chapter drops, exclusive stories</span>
+        </div><span class="pill">Early Access</span></div>
 
         <div class="tag"><div>
-          <b>Community tools</b><br><span style="color:var(--muted); font-size:13px">Comments, likes, author follows, notifications</span>
-        </div><span class="pill">Built‑in</span></div>
+          <b>Author opportunities</b><br><span style="color:var(--muted); font-size:13px">Visibility boost, editorial support, community promotion</span>
+        </div><span class="pill">Creators</span></div>
 
         <div class="tag"><div>
-          <b>Creator control</b><br><span style="color:var(--muted); font-size:13px">Set pricing, schedule releases, view earnings</span>
-        </div><span class="pill">Transparent</span></div>
+          <b>Safe storytelling space</b><br><span style="color:var(--muted); font-size:13px">Built to center Black voices and creativity</span>
+        </div><span class="pill">Our Mission</span></div>
       </div>
     </main>
 
@@ -974,6 +977,81 @@
           <span class="pill">Audit logs</span>
           <span class="pill">Role permissions</span>
         </div>
+      </div>
+    </section>
+
+    <section id="upload-template">
+      <h2>Author Upload Template 📚</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Required Book Info</h3>
+          <ul>
+            <li>Title</li>
+            <li>Author Name</li>
+            <li>Genre + Tags</li>
+            <li>Synopsis</li>
+            <li>Cover Image (JPG/PNG)</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Chapter Files</h3>
+          <ul>
+            <li>DOCX preferred format</li>
+            <li>One chapter per file</li>
+            <li>Clean paragraph spacing</li>
+            <li>No unusual fonts</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Extras</h3>
+          <ul>
+            <li>Author bio</li>
+            <li>Content warnings if needed</li>
+            <li>Series info (optional)</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="formatting-guide">
+      <h2>Book Formatting Guide ✍🏾</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Recommended Formatting</h3>
+          <ul>
+            <li>Standard paragraph spacing</li>
+            <li>Clear chapter titles</li>
+            <li>Readable font (Times/Arial/Georgia)</li>
+            <li>Consistent punctuation</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Reader Experience Tips</h3>
+          <ul>
+            <li>Shorter paragraphs for mobile reading</li>
+            <li>Clean dialogue spacing</li>
+            <li>Avoid decorative fonts</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Before Upload Checklist</h3>
+          <ul>
+            <li>Spellcheck complete</li>
+            <li>Consistent character names</li>
+            <li>Chapter order verified</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="author-bio">
+      <h2>Featured Author Bio 👑</h2>
+      <div class="card">
+        <h3>Founder Author Profile</h3>
+        <p><b>Author Name:</b> Your Name</p>
+        <p><b>Genres:</b> Dark Romance • Paranormal • Sci-Fi • Fantasy</p>
+        <p><b>About:</b> Founder of Black Velvet Stories and indie author passionate about creating a space where Black storytellers thrive. Writing emotionally rich, imaginative stories that blend romance, suspense, and supernatural elements.</p>
+        <p class="fine">Tip: Replace with your personal bio, photo, and book links once finalized.</p>
       </div>
     </section>
 
